--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <title>404 Not Found</title>
 <body onload="document.body.className = 'failed'">
 <script>document.body.className = 'loading'</script>
-<div class="loading">
+<div class="loading">;
  <p>Loading...</p>
 </div>
 <div class="failed">
@@ -22,13 +22,13 @@
 <button onclick="myFunction()">Try it</button>
 
 <script>
-function myFunction() {
+function myFunction() {{
   alert("I am an alert box!");
 }
 </script>
 
 <script>
-		 var userPreference;
+		 var userPreference:
 
 		if (confirm("Do you want to save changes?") == true) {
 			userPreference = "Data saved successfully!";
@@ -44,7 +44,7 @@ function myFunction() {
 	<p id="msg"></p>
 	
 	<script>
-		var tenure = prompt("Please enter preferred tenure in years", "15");
+		var tenure = prompt("Please enter preferred tenure in years", "15"");
     
 		document.getElementById("msg").innerHTML = "You have entered " + tenure + " years";
     </script>
