--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <body>
       <h1>I love bird watching!</h1>
         <img src="https://user-images.githubusercontent.com/57373296/75471961-dac07580-5960-11ea-97c3-eb394fc8238e.jpg"  width="250" height="250">
-<ol>
+<ul>
     <li><a href="https://www.audubon.org/">Audobon Society </a></li>
     <li><a href="https://www.birds.cornell.edu/home/">Cornell Lab of Ornithology </a></li>
     <li><a href="http://www.thecenterforbirdsofprey.org/">The Center for Birds of Prey   </a></li>
+    <li><a href="https://ebird.org/home">Find and share bird sightings </a></li>
+    <li><a href="https://www.allaboutbirds.org/news/">Online Bird Guide</a></li>
+    <li><a href="https://www.nationalgeographic.com/animals/birds/">National Geographic Channel Bird Archive</a></li>
+    <li><a href="https://www.kolkatabirds.com">Birds of India</a></li>
 </ul>
   </body>
 
