Tweaked font and size-values again to make the UI resemble twitter more accurately

--- a/twitter.html
+++ b/twitter.html
@@ -76,7 +76,7 @@
         }
 
         * { position: relative }
-        * { font-family: calibri }
+        * { font-family: arial }
 
         body { margin: 0 }
 
@@ -108,15 +108,15 @@
             justify-content: center;
         }
 
-        #A { max-width: 250px }
-        #B { max-width: 580px;
+        #A { max-width: 260px }
+        #B { max-width: 600px;
             border-left: 1px solid #ddd;
             border-right: 1px solid #ddd;
         }
         #C { }
 
-        #D { max-width: 250px }
-        #E { max-width: 500px }
+        #D { max-width: 260px }
+        #E { max-width: 600px }
         #F { max-width: 400px }
 
         main { flex-direction: row }
@@ -128,7 +128,7 @@
             position: absolute;
             top: 64px;
             width: 100%;
-        }}
+        }
 
         /* profile header image */
         #head section:nth-child(1) {
@@ -158,7 +158,7 @@
 
         #avatar {
             position: relative;
-            margin: 30px;
+            margin: 32px;
             margin-top: 100px;
             margin-left: 16px;
             width: 150px;
@@ -168,7 +168,7 @@
             align-items: center;
             justify-content: center;
             background: white;
-            box-shadow: 0 0 18px #ddd;
+            box-shadow: 0 0 15px #ddd;
         }
 
         #avatar img {
